force-app/main/default/objects/Proposal_Content__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contractor Application</fullName>
            </value>
            <value>
                <fullName>Project Application</fullName>
            </value>
            <value>
                <fullName>NYSERDA Incentive</fullName>
            </value>
            <value>
                <fullName>Yearly Performance Payment</fullName>
            </value>
            <value>
                <fullName>Project Deliverable</fullName>
            </value>
            <value>
                <fullName>Yearly Report Deliverable</fullName>
            </value>
            <value>
                <fullName>Contractor Checklist</fullName>
            </value>
            <value>
                <fullName>Project Manager Checklist</fullName>
            </value>
            <value>
                <fullName>Proposal Checklist Questions</fullName>
            </value>
            <value>
                <fullName>Proposal Disclosure Questions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>