force-app/main/default/objects/Proposal_Content__c/fields/Validation_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Validation_Error_Message__c</fullName>
    <inlineHelpText>Only error message of question will be here.</inlineHelpText>
    <label>Validation Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>