force-app/main/default/objects/Proposal_Content__c/fields/Validation_Logic__c.field-meta.xml
<CustomField>
    <fullName>Validation_Logic__c</fullName>
    <label>Validation Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>