force-app/main/default/objects/Proposal_Content__c/fields/Validation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Validation_Notes__c</fullName>
    <label>Validation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>