force-app/main/default/objects/Proposal_Content__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>