force-app/main/default/objects/Proposal_Content__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HEV</fullName>
            </value>
            <value>
                <fullName>CNG</fullName>
            </value>
            <value>
                <fullName>LPG</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Bi-Fuel</fullName>
            </value>
            <value>
                <fullName>Diesel Retrofit</fullName>
            </value>
            <value>
                <fullName>Anti Idling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>